# video-transcribe

./: .firebaserc  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  main.yml
be/: .env.sample  __init__.py  pyproject.toml
be/alembic/: env.py
be/alembic/versions/: 97f93e06f9fe_add_videos_table.py
be/app/: config.py  main.py
be/app/database/: session.py
be/app/models/: video.py
fe/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
fe/scripts/: generate-firebase-config.js
fe/src/: App.tsx  main.tsx
fe/src/components/: SignInButton.tsx  StyledFirebaseAuth.tsx  VideoUploader.tsx
fe/src/config/: firebase-config.sample.ts  firebase.ts  query-client.ts
fe/src/hooks/: auth.ts  videos.ts
fe/src/routes/: __root.tsx  index.tsx  login.tsx
fe/src/services/: videos.ts
fe/src/types/: firebase.ts  video.ts
