[project]
name = "video-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.14",
    "openai-whisper>=20250625",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "alembic>=1.16.2",
]
